# rl_practice

./: .gitignore  .gitmodules  CARLA_SETUP.md  LICENSE  README.md  analyze_episode_video.py  avg.py  avg.sh  carla_leaderboard_env.py  clearn_rl.py  crop_environment_video.py  dac.py  eval_simlingo.sh  exec_all.sh  exec_all_temporal_blocks.sh  exp.sh  flow_matching.py  four_quadrant_env.py  four_quadrant_game.py  generic_gui_env.py  letter_tracing_game.py  main.py  memory_maze_gym_wrapper.py  model.py  network.py  observer.py  play_with_human.py  play_zeroshot.py  play_zeroshot.sh  plot.py  pyproject.toml  pytorch_tutorial.py  qwen3_vl_grpo.py  replay_buffer.py  requirements.txt  requirements_freeze.txt  reward_processor.py  rtrl.py  rtrl_layer.py  run_qwenvl_local.py  (+55 more)
agents/: avg.py  off_policy.py  on_policy.py  ppo.py  recurrent_ppo.py  sac.py  utils.py
clearn_rl/: clearn_rl.py  model.py
config/: config.yaml
config/agent/: off_policy.yaml  on_policy.yaml
config/env/: CarRacing-v3.yaml  MiniGrid-MemoryS9-v0.yaml
configs/: babyai_goto_local.yaml  car_racing_baseline.yaml  car_racing_on_policy.yaml  car_racing_qwenvl.yaml  car_racing_streaming.yaml  carla_off_policy.yaml  default.yaml  exp.yaml  exp_gui.yaml  gui_env.yaml  minigrid_memory.yaml  minigrid_memory_off_policy_pathwise.yaml  sweep.yaml
configs/agent/: base_network.yaml  base_off_policy.yaml  base_on_policy.yaml  base_streaming.yaml  base_vlm.yaml  cnn_off_policy_bs16.yaml  cnn_off_policy_bs8.yaml  cnn_streaming.yaml  simlingo.yaml  vlm_off_policy_bs1.yaml  vlm_off_policy_bs16.yaml  vlm_off_policy_bs8.yaml  vlm_streaming.yaml
configs/env/: animalai.yaml  babyai_goto_local.yaml  car_racing.yaml  carla.yaml  gui.yaml  minigrid_memory.yaml
configs/self_forcing/: b2d_finetune.yaml
docker/: Dockerfile  run.sh
docs/: fla_architecture.md  qwenvl3.md
for_handy_rl/: env.py  net.py
metrics/: compute_norm.py  gradient_norm.py  statistical_metrics_computer.py
misc/: check.py  flow_matching.py
networks/: actor_critic_with_action_value.py  actor_critic_with_state_value.py  backbone.py  blocks.py  diffusion_policy.py  network.py  policy_head.py  ppo_beta_policy_and_value.py  ppo_paligemma_policy_value.py  ppo_smolvla_policy_value.py  ppo_smolvlm_policy_value.py  ppo_tanh_policy_and_value.py  prediction_head.py  reward_processor.py  sac_smolvla_policy_and_q.py  sac_tanh_policy_and_q.py  self_attention.py  sequence_compressor.py  sequence_processor.py  smolvla_backbone.py  sparse_utils.py  spatial_temporal_transformer.py  temporal_block.py  utils.py  value_head.py  vlm.py  vlm_actor_critic_with_action_value.py  vlm_actor_critic_with_state_value.py  vlm_backbone.py  vlm_policy_network.py  weight_project.py
networks/epona/: flux_dit.py  layers.py
networks/for_mmmamba/: configuration_mmMamba.py  configuration_mmMamba_chat.py  configuration_mmMamba_embedding.py  conversation.py  fused_norm_gate.py  modeling_mmMamba.py  modeling_mmMamba_chat.py  modeling_mmMamba_embedding.py
old_scripts/: train_minigrid_memory_on_policy_pathwise.sh  train_minigrid_memory_on_policy_score.sh
optimizers/: obgd.py
sac/cleanrl/: avg.py  buffers.py  exp.sh  network.py  preprocessing.py  sac.py  sac_continuous_action.py  type_aliases.py
scripts/: analyze_episode_video.py  bench_video_encoder.py  crop_environment_video.py  download_stl10.py  play_with_human.py  play_zeroshot.py  plot_result.py  plot_result_tracking_square.py  plot_wandb_log.py  run_qwen35_local.py  run_qwenvl_local.py  run_qwenvl_local_original.py  run_vlm_local.py  test_encoder.py  train.py
scripts/self_forcing/: encode_latents.py  infer_valid.py  split.py  train.py
src/rl_practice/: replay_buffer.py  reward_processor.py  utils.py  wrappers.py
src/rl_practice/agents/: off_policy.py  on_policy.py  streaming.py
src/rl_practice/envs/: base_gui_env.py  carla_leaderboard_env.py  color_panel_env.py  color_panel_game.py  four_quadrant_env.py  four_quadrant_game.py  generic_gui_env.py  jigsaw_puzzle_game.py  letter_tracing_env.py  letter_tracing_game.py  moving_circle_env.py  moving_circle_game.py  simple_four_quadrant_env.py
src/rl_practice/metrics/: statistical_metrics_computer.py
src/rl_practice/networks/: actor_critic_with_action_value.py  actor_critic_with_state_value.py  backbone.py  blocks.py  diffusion_utils.py  image_processor.py  policy_head.py  prediction_head.py  reward_processor.py  self_attention.py  sequence_compressor.py  spatial_temporal_transformer.py  temporal_block.py  value_head.py  vlm_actor_critic_with_action_value.py  vlm_actor_critic_with_state_value.py  vlm_backbone.py  weight_project.py
src/rl_practice/networks/epona/: README.md  flux_dit.py  layers.py
src/rl_practice/networks/for_mmmamba/: configuration_mmMamba.py  configuration_mmMamba_embedding.py  fused_norm_gate.py  modeling_mmMamba.py
src/rl_practice/optimizers/: adam_et.py
src/vla_streaming_rl/: replay_buffer.py  td_error_scaler.py  utils.py  wrappers.py
src/vla_streaming_rl/agents/: off_policy.py  on_policy.py  simlingo.py  streaming.py  zeroshot_vlm.py
src/vla_streaming_rl/envs/: animalai_env.py  base_gui_env.py  bench2drive_route.py  bench2drive_scenario_runtime.py  carla_leaderboard_env.py  carla_obs.py  color_panel_env.py  eval_writer.py  four_quadrant_env.py  letter_tracing_env.py  moving_circle_env.py  random_square_env.py  stl10_panel_env.py  tracking_square_env.py  vehicle_graph.py
src/vla_streaming_rl/metrics/: compute_norm.py
src/vla_streaming_rl/networks/: action_expert.py  action_tokenizer.py  actor_critic_with_action_value.py  actor_critic_with_state_value.py  backbone.py  blocks.py  build.py  cross_attention_expert.py  diffusion_utils.py  image_processor.py  policy_head.py  self_attention.py  sequence_compressor.py  sparse_utils.py  temporal_block.py  value_head.py  video_encoder.py  vlm_actor_critic_with_action_value.py  vlm_backbone.py  vlm_input_cache.py
src/vla_streaming_rl/optimizers/: adam_et.py  muon_et.py  sgd_et.py
src/vla_streaming_rl/self_forcing/: README.md  __init__.py  goal_predictor.py
(+30 files in other folders)
