[project]
name = "rl_practice"
version = "0.0.0"
dependencies = [
    "gymnasium[box2d]",
    "gymnasium[mujoco]",
    "wandb",
    "tyro",
    "stable-baselines3",
    "timm",
    "opencv-python",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["D"]
ignore = [
    "ARG002",
    "COM812",
    "E501",
    "EM101",
    "PERF102",
    "PTH119",
    "PLR0913",
    "RET504",
    "RSE102",
    "SIM102", "SIM118",
    "UP031",

    "B028",
    "BLE001",
    "D100", "D103", "D104", "D105", "D107", "D205", "D212", "D213",
    "DTZ005",
    "EM102",
    "FA100", "FA102",
    "FBT001", "FBT002",
    "G004",
    "INP001",
    "N806", "N812",
    "NPY002",
    "PD901",
    "PLR2004",
    "PLW2901",
    "RET505",
    "RUF003",
    "S101", "S602",
    "T201",
    "TRY003",
]
