[project]
name = "vla_streaming_rl"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
authors = [{ name = "Shintaro Sakoda" }]
dependencies = [
    "gymnasium[box2d]",
    "gymnasium[mujoco]",
    "gymnasium[other]",
    "wandb",
    "tyro",
    "stable-baselines3",
    "timm",
    "opencv-python",
    "diffusers",
    "accelerate",
    "hl_gauss_pytorch",
    "wheel",
    "packaging",
    "num2words",
    "imageio[ffmpeg]",
    "minigrid",
    "peft",
    "fschat",
    "sentencepiece",
    "qwen-vl-utils",
    "bitsandbytes",
    "flash-linear-attention",
    "pytesseract",
    "pyautogui",
    "pynput",
    # CUDA拡張パッケージ（プリビルドホイール使用）
    "mamba-ssm",
    "causal-conv1d",
    "flash-attn",
    # PyTorch 2.7系に固定（プリビルドホイールとの互換性のため）
    "torch>=2.7,<2.8",
    "torchvision>=0.22,<0.23",
    "transformers>=5.2.0",
    "scipy>=1.17.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "py-trees==0.8.3",
    "tabulate>=0.10.0",
    "shapely>=2.1.2",
    "dictor>=0.1.12",
    "pexpect>=4.9.0",
    "transforms3d>=0.4.2",
    "xmlschema>=4.3.1",
    "simple-watchdog-timer>=0.1.1",
    "ephem>=4.2.1",
    "networkx>=3.6.1",
    "psutil>=7.2.2",
    "setuptools<81",
    # Self-Forcing (vendored under src/vla_streaming_rl/self_forcing/)
    "huggingface_hub",
    "einops",
    "ftfy",
    "regex",
    "tqdm",
    # CARLA (path resolved via tool.uv.sources below)
    "carla",
    "animalai==5.0.1",
    "mlagents-envs==1.0.0",
    "protobuf==3.20.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vla_streaming_rl"]

[tool.uv]
exclude-newer = "40 days"
exclude-newer-package = { torch = false, torchvision = false }
index-url = "https://pypi.org/simple"
override-dependencies = [
    "protobuf==3.20.3",
    "numpy>=1.26.4",
    "grpcio>=1.60",
    "pettingzoo>=1.24",
    "gym>=0.26",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
causal-conv1d = { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.6.0/causal_conv1d-1.6.0+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.1/flash_attn-2.8.1+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
mamba-ssm = { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.0/mamba_ssm-2.3.0+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
carla = { path = "../../CARLA_0.9.16/PythonAPI/carla/dist/carla-0.9.16-cp312-cp312-manylinux_2_31_x86_64.whl" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["I"]
extend-ignore = ["ANN", "D"]
ignore = [
    "ARG002",
    "COM812",
    "E501",
    "EM101",
    "PERF102",
    "PTH119",
    "PLR0913",
    "RET504",
    "RSE102",
    "SIM102", "SIM118",
    "UP031",

    "B028",
    "BLE001",
    "D100", "D103", "D104", "D105", "D107", "D205", "D212", "D213",
    "DTZ005",
    "EM102",
    "ERA001",
    "FA100", "FA102",
    "FBT001", "FBT002",
    "G004",
    "INP001",
    "N806", "N812",
    "NPY002",
    "PLR2004",
    "PLW2901",
    "RET505",
    "RUF003",
    "S101", "S602",
    "T201",
    "TRY003",
]
